fix all logic
